<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="chat_support">Написать в поддержку</string>
    <string name="user_agreements">Пользовательское соглашение</string>
    <string name="url_practicum">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="mail">itdxbr00@yandex.ru</string>
    <string name="message_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_of_message_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="url_to_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="button_back">Кнопка назад</string>
    <string name="clear_edit_text">Очистить строку</string>
    <string name="track_image">Изображение песни</string>
    <string name="not_found">Ничего не нашлось!</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="connection_problem_additional">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="history_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time_0_00">00:00</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="create_new_playlist">Новый плейлист</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="finish_creating">Завершить создание плейлиста?</string>
    <string name="finish_editing">Завершить редактирование плейлиста?</string>
    <string name="all_data_will_be_deleted">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="was_added_to_playlist">Трек уже добавлен в плейлист</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="updated">обновлен</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="save">Cохранить</string>
    <string name="image_is_not_picked">Изображение не выбрано</string>
    <string name="empty_list">Здесь еще нет треков</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_playlist_title">Удалить плейлистк</string>
    <string name="delete_track_text">Хотите удалить трек?</string>
    <string name="delete_playlist_text">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_was_not_found">Плейлист не найден!</string>
    <string name="there_are_not_tracks">В данном плейлисте нет треков!</string>
    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>
    <plurals name="minute_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>