<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:title="@string/settings"
        app:titleTextAppearance="@style/TitleText">


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/standard_padding"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_night_mode"
            style="@style/Switch"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:paddingHorizontal="0dp"
            android:paddingVertical="@dimen/padding_21"
            android:text="@string/dark_theme" />

        <TextView
            android:id="@+id/share_app"
            style="@style/SettingText"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginEnd="12dp"
            android:drawableEnd="@drawable/ic_share"
            android:text="@string/share_app" />

        <TextView
            android:id="@+id/write_in_support"
            style="@style/SettingText"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginEnd="12dp"
            android:drawableEnd="@drawable/ic_support"
            android:text="@string/chat_support" />

        <TextView
            android:id="@+id/user_agreement"
            style="@style/SettingText"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginEnd="12dp"
            android:drawableEnd="@drawable/ic_next"
            android:text="@string/user_agreements" />

    </LinearLayout>
</LinearLayout>