<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:contentInsetStart="@null">

        <ImageView
            android:id="@+id/icon_back"
            style="@style/Icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/button_back"
            android:padding="12dp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/search" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        style="@style/RoundedFrameWithEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standard_padding"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_search"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_search_edit_text"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingVertical="10dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/icon_clear_search"
            style="@style/IconDarkGreyAndBlack"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/clear_edit_text"
            android:src="@drawable/ic_close"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_padding"/>

</LinearLayout>