<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".player.ui.AudioPlayerActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back">

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/track_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/track_image"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_big"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/track_name"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_image"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/track_artist"
            style="@style/GeneralText14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/ib_add_to_playlist"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/grey_rounded_button"
            android:src="@drawable/ic_playlist"
            app:layout_constraintBottom_toBottomOf="@+id/ib_play"
            app:layout_constraintEnd_toStartOf="@id/ib_play"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/ib_play" />

        <ImageButton
            android:id="@+id/ib_play"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/white_round_button"
            android:enabled="false"
            android:src="@drawable/ic_play_arrow"
            app:layout_constraintEnd_toStartOf="@id/ib_add_to_favorite"
            app:layout_constraintStart_toEndOf="@id/ib_add_to_playlist"
            app:layout_constraintTop_toBottomOf="@id/track_artist" />

        <ImageButton
            android:id="@+id/ib_add_to_favorite"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/grey_rounded_button"
            app:layout_constraintBottom_toBottomOf="@+id/ib_play"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/ib_play"
            app:layout_constraintTop_toTopOf="@+id/ib_play" />

        <TextView
            android:id="@+id/record_time"
            style="@style/GeneralText14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/time_0_00"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/ib_play" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/text_track_time"
            style="@style/TrackDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintBottom_toTopOf="@id/text_collection_name"
            app:layout_constraintStart_toEndOf="@id/left_guideline16"
            app:layout_constraintTop_toBottomOf="@id/record_time" />

        <TextView
            android:id="@+id/track_time"
            style="@style/TrackDescriptionTextItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="@+id/text_track_time"
            app:layout_constraintEnd_toStartOf="@id/right_guideline16"
            app:layout_constraintTop_toTopOf="@id/text_track_time"
            tools:text="5:35" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="text_collection_name, collection_name" />

        <TextView
            android:id="@+id/text_collection_name"
            style="@style/TrackDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/collection"
            app:layout_constraintBottom_toTopOf="@id/text_year"
            app:layout_constraintStart_toEndOf="@id/left_guideline16"
            app:layout_constraintTop_toBottomOf="@id/text_track_time" />

        <TextView
            android:id="@+id/collection_name"
            style="@style/TrackDescriptionTextItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="@+id/text_collection_name"
            app:layout_constraintEnd_toStartOf="@id/right_guideline16"
            app:layout_constraintStart_toEndOf="@id/text_track_time"
            app:layout_constraintTop_toTopOf="@id/text_collection_name"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/text_year"
            style="@style/TrackDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/year"
            app:layout_constraintBottom_toTopOf="@id/text_genre"
            app:layout_constraintStart_toEndOf="@id/left_guideline16"
            app:layout_constraintTop_toBottomOf="@id/text_collection_name" />

        <TextView
            android:id="@+id/year"
            style="@style/TrackDescriptionTextItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_year"
            app:layout_constraintEnd_toStartOf="@id/right_guideline16"
            app:layout_constraintTop_toTopOf="@id/text_year"
            tools:text="1965" />

        <TextView
            android:id="@+id/text_genre"
            style="@style/TrackDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genre"
            app:layout_constraintBottom_toTopOf="@id/text_country"
            app:layout_constraintStart_toEndOf="@id/left_guideline16"
            app:layout_constraintTop_toBottomOf="@id/text_year" />

        <TextView
            android:id="@+id/genre"
            style="@style/TrackDescriptionTextItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_genre"
            app:layout_constraintEnd_toStartOf="@id/right_guideline16"
            app:layout_constraintTop_toTopOf="@id/text_genre"
            tools:text="Рок" />

        <TextView
            android:id="@+id/text_country"
            style="@style/TrackDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="28dp"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/left_guideline16"
            app:layout_constraintTop_toBottomOf="@id/text_genre" />

        <TextView
            android:id="@+id/country"
            style="@style/TrackDescriptionTextItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_country"
            app:layout_constraintEnd_toStartOf="@id/right_guideline16"
            app:layout_constraintTop_toTopOf="@id/text_country"
            tools:text="Велокобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_line" />

        <TextView
            android:id="@+id/bottom_sheet_title"
            style="@style/BottomSheetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_to_playlist"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bottom_sheet_new_playlist_button"
            style="@style/StyleForReloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/create_new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="24dp"
            tools:listitem="@layout/item_playlist_bottom_sheet"/>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/player_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:defaultNavHost="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>